Fix Safari column-count alignment bug

--- a/src/_styles/escom.scss
+++ b/src/_styles/escom.scss
@@ -417,6 +417,9 @@ p {
     font-size: $body-medium;
     list-style: none;
     margin-bottom: 16px;
+    position: relative;
+    display: inline-block;
+    width: 100%;
   }
 
   @media screen and (min-width: $tablet-width) {
